cmake_minimum_required(VERSION 3.8)
project(my_cpp_pkg)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(example_interfaces REQUIRED)
find_package(my_robot_interfaces REQUIRED)

#adding executable
add_executable(cpp_node src/my_first_cpp_node.cpp) #executable name and corresponding file name
ament_target_dependencies(cpp_node rclcpp) #specifying ros2 dependencies

add_executable(second_node_exe src/my_second_cpp_node.cpp)
ament_target_dependencies(second_node_exe rclcpp)

add_executable(robot_news_station src/robot_news_station.cpp)
ament_target_dependencies(robot_news_station  rclcpp example_interfaces)

add_executable(smartphone src/smartphone.cpp)
ament_target_dependencies(smartphone rclcpp example_interfaces)

add_executable(number_publisher src/number_publisher.cpp)
ament_target_dependencies(number_publisher rclcpp example_interfaces)

add_executable(number_counter src/number_counter.cpp)
ament_target_dependencies(number_counter rclcpp example_interfaces)

add_executable(add_two_ints_server src/add_two_ints_server.cpp)
ament_target_dependencies(add_two_ints_server rclcpp example_interfaces)

add_executable(add_two_ints_clent_no_oop src/add_two_ints_clent_no_oop.cpp)
ament_target_dependencies(add_two_ints_clent_no_oop rclcpp example_interfaces)

add_executable(add_two_ints_clent src/add_two_ints_clent.cpp)
ament_target_dependencies(add_two_ints_clent rclcpp example_interfaces)

add_executable(hw_status_publisher src/hardware_status_publisher.cpp)
ament_target_dependencies(hw_status_publisher rclcpp my_robot_interfaces)

add_executable(battery src/battery.cpp)
ament_target_dependencies(battery rclcpp my_robot_interfaces)

add_executable(led_panel src/led_panel.cpp)
ament_target_dependencies(led_panel rclcpp my_robot_interfaces)

#installin node
install(TARGETS #not need to write any more 
  cpp_node
  second_node_exe
  robot_news_station
  smartphone
  number_publisher
  number_counter
  add_two_ints_server
  add_two_ints_clent_no_oop
  add_two_ints_clent
  hw_status_publisher
  battery
  led_panel
  DESTINATION lib/${PROJECT_NAME} #don't make any typo here
)

ament_package()
